# OGCAPI

./: .gitignore  README.md  create-collections.ipynb  docker-compose-byteroad.yml  docker-compose-db.yml  docker-compose-local.yml  docker-compose-tests.yml  docker-compose.yml  export-postgis-table.sh  setup_env.sh
apache-httpd/: Dockerfile  httpd-ssl-byteroad.conf  httpd-ssl-test.conf  httpd-ssl.conf  httpd.conf
kubernetes/base/: kustomization.yaml
mapserver/: Dockerfile  apache-mapserver.conf  mapfile.map  mapserv.fcgi
martin/: config-caop.yml  config-inspire.yml
matomo/: Dockerfile.cron  Dockerfile.main  cronjob  entrypoint.sh  refresh_logs.sh
old_compose/: docker-compose.yml
old_compose/apache-httpd/: Dockerfile  (+2 more)
pg_tileserv/: Dockerfile.alpine
postgis/: Dockerfile  Dockerfile.remote  initDB.sql  initDB_remote.sql  pg_hba.conf
pygeoapi/: default.css  docker.config-byteroad.yml  docker.config.yml  docker.config2.yml
utils/: Dockerfile  README.md  create_joined_views.py  create_views.py  docker.config.yml  pyproject.toml  requirements.txt  template_admin.yml  template_cadastro.yml  template_caop.yml  template_cos.yml  template_cos_2018.yml  template_cos_2023.yml  template_cos_view.yml  template_crus.yml  template_distritos.yml  template_freguesias.yml  template_joined_view.yml  template_municipios.yml  template_nuts1.yml  template_nuts2.yml  template_nuts3.yml  template_table.yml  template_trocos.yml  template_view.yml  template_view_cos2018v3.yml  template_view_cos2023v1.yml  upload_tables.py  upload_tables.sh  upload_tables_and_views.sh  utils.py
(+26 files in other folders)
