[tool.poetry]
name = "postgres_pygeoapi_setup"
version = "0.1.0"
description = "A script to generate SQL views and YAML configuration for PyGeoAPI from PostgreSQL tables."
authors = ["Ant ByteRoad <ant@byteroad.net>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
psycopg2 = "*"
unidecode = "*"
geopandas = "1.0.1"
sqlalchemy = "*"
geoalchemy2 = "^0.15.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"